# rust-web-app

./: .env.test  Cargo.toml  package.json  readme.md
src/: config.rs  constants.rs  db.rs  main.rs
src/common/: mod.rs
src/middleware/: authentication.rs
src/models/: user.rs
src/modules/auth/: controller.rs  dto.rs  mod.rs  service.rs  test.rs
src/tests/: utils.rs
