[package]
name = "web-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
argon2 = "0.5.1"
chrono = "0.4.26"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
mongodb = "2.6.0"
serde = "1.0.176"
